# tmux-legion

./: Cargo.toml  LICENSE  README.md  SKILL.md  flake.nix  tmux-legion.tmux
.github/workflows/: ci.yml
claude/: hooks.json
pi/: tmux-legion.ts
src/: cli.rs  main.rs  notify.rs  process.rs  state.rs  status.rs  tmux.rs
src/commands/: hook.rs  list.rs  mod.rs  report.rs  spawn.rs  toggle.rs  wait.rs
src/hook/: claude.rs
src/sidebar/: app.rs  mod.rs  theme.rs  ui.rs
