[package]
name = "tmux-legion"
version = "0.2.0"
edition = "2021"
description = "A tmux sidebar that tracks every AI agent in your session: blocked, working, done"
license = "MIT"
repository = "https://github.com/hawkish/tmux-legion"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
rustix = { version = "1", features = ["fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

[profile.release]
strip = true
lto = true
